# Shelfer

./: README.md
nav2_send_goal_sample/: CMakeLists.txt  README.md  waypoints.txt
nav2_send_goal_sample/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
nav2_send_goal_sample/install/nav2_send_goal/lib/nav2_send_goal/: nav2_get_position  nav2_get_positionAMCL  nav2_send_goal  nav2_send_initial_pose  nav2_send_waypoint  rosbot_auto_localizator
nav2_send_goal_sample/install/nav2_send_goal/share/ament_index/resource_index/parent_prefix_path/: nav2_send_goal
nav2_send_goal_sample/install/nav2_send_goal/share/nav2_send_goal/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
nav2_send_goal_sample/install/nav2_send_goal/share/nav2_send_goal/cmake/: nav2_send_goalConfig.cmake
nav2_send_goal_sample/src/: amcl_auto_localization.cpp  amcl_auto_localization_node.cpp  nav2_get_position.cpp  nav2_get_positionAMCL.cpp  nav2_send_goal.cpp  nav2_send_initial_pose.cpp  nav2_send_waypoint.cpp
